* moved the x-overflow css hack only to be included on the pages using the exhibition layout that showed the issue

--- a/public/stylesheets/sass/layout/_reset.scss
+++ b/public/stylesheets/sass/layout/_reset.scss
@@ -17,7 +17,6 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 }
 html {
     overflow-y: scroll;
-    overflow-x: hidden;
 }
 body {
     line-height: 20px;
